# gravity-sim

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: collisionShader.glsl  gl-helper.h  grid.hpp  physicsShader.glsl  quadTree.hpp  threadManager.hpp
include/glad/: glad.h
src/: glad.c  grid.cpp  main.cpp  quadTree.cpp
